tests/ui/modules/path-invalid-form.stderr
error: malformed `path` attribute input
  --> $DIR/path-invalid-form.rs:1:1
   |
LL | #[path = 123]
   | ^^^^^^^^^^^^^ help: must be of the form: `#[path = "file"]`
   |
   = note: for more information, visit <https://doc.rust-lang.org/reference/items/modules.html#the-path-attribute>

error: aborting due to 1 previous error

